# CSC485B-Data-Compression

./: .gitignore  README.md
exercises/break-deflate/: README.md  compare.sh  create_input.py
exercises/gzip-hack/: Makefile  generate_input.cpp
gzip_exercise/: task.md
uvcompress/: .gitignore  Makefile  README.md  binary_field.cpp  binary_field.h  compress_fs_encoder.cpp  compress_fs_encoder.h  lzw_encoder.cpp  lzw_encoder.h  run_and_compare.sh  test_binary_field.cpp  test_compress_fs_encoder.cpp  test_lzw_encoder.cpp  uvcompress.cpp
uvg/: .gitignore  CMakeLists.txt  Makefile  README.md  codec.sh  codec_images.sh  gen_dct_matrix.cpp  uvg_common.hpp  uvg_compress.cpp  uvg_decompress.cpp  zigzag.txt
uvg/dct/: CMakeLists.txt  dct.cpp  dct.h  test_dct.cpp
uvg/delta/: delta.cpp  delta.h  test_delta.cpp
uvg/include/: input_stream.hpp  matrix.h  output_stream.hpp
uvg/starter_code/: Makefile  uvg_compress.cpp  uvg_decompress.cpp
uvgz/: .gitignore  CMakeLists.txt  Makefile  README.md  binary.h  deflate.h  gzip.cpp  gzip.h  lzss.cpp  lzss.h  lzss_backref.h  main.cpp  prefix.cpp  prefix.h  test_gzip.cpp  test_lzss.cpp  test_prefix.cpp  uvgz.cpp
uvgz/block2/: Makefile  uvgz.cpp
uvgz/lzss/: Makefile  lzss.cpp  lzss.h  test_lzss.cpp
uvgz/shared/: binary.h  output_stream.hpp
uvid/: .gitignore  CMakeLists.txt  Makefile  README.md  get_catch.sh  uvid_compress.cpp  uvid_decode.cpp  uvid_decode.h  uvid_decompress.cpp
uvid/dct/: CMakeLists.txt  dct.cpp  dct.h  test_dct.cpp
uvid/delta/: CMakeLists.txt  delta.h  test_delta.cpp
uvid/include/: CMakeLists.txt  input_stream.hpp  matrix.h  test_matrix.cpp  yuv_stream.hpp
uvid/scripts/: codec.sh  play_raw.sh  play_y4m.sh  raw_to_y4m.sh  stream.sh  y4m_to_raw.sh
uvid/starter_code/: Makefile  uvid_compress.cpp  uvid_decompress.cpp  yuv_stream.hpp
uvzz/: .gitignore  CMakeLists.txt  Makefile  README.md  uvzz_compress.cpp  uvzz_decompress.cpp  validate_on_test_data.sh
uvzz/arith/: CMakeLists.txt  Makefile  arith.cpp  arith.h  arith_compress.cpp  arith_decompress.cpp  input_stream.hpp  validate_on_test_data.sh
uvzz/bwt/: CMakeLists.txt  bwt.cpp  bwt.h  test_bwt.cpp
uvzz/include/: CMakeLists.txt  binary.h  constants.h  input_stream.h  output_stream.h  test_vb.cpp
uvzz/mtf/: CMakeLists.txt  mtf.cpp  mtf.h  test_mtf.cpp
uvzz/rle/: CMakeLists.txt  rle.cpp  rle.h  test_rle.cpp
